--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <header class="header">
         <div class="navbar container">
             <a href=""><img src="images/logo.svg" alt=""></a>
+            <button class="m-menu"><svg width="15" height="12" viewBox="0 0 15 12" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 1H15" stroke="white" />
+                    <path d="M0 6H15" stroke="white" />
+                    <path d="M0 11H15" stroke="white" />
+                </svg>
+            </button>
             <nav class="nav">
                 <ul class="menu">
                     <li class="menu-item">
